--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    container: ghcr.io/manetu/ci-tools:3.1
     permissions:
       contents: read
       packages: write
