--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,8 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: ["Test"]
-    branches: [ master, develop ]
-    types:
-      - completed
+  push:
+    tags: [ 'v*' ]
 
 env:
   REGISTRY: ghcr.io
@@ -14,7 +11,6 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     container: ghcr.io/manetu/ci-tools:3.1
     permissions:
       contents: read
@@ -30,7 +26,6 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Log in to Container Registry
-      if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
@@ -43,17 +38,14 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=ref,event=branch
-          type=ref,event=pr
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
-          type=raw,value=latest,enable={{is_default_branch}}
 
     - name: Build and push Docker images
       uses: manetu/docker-multistage-action@v1
       with:
         context: .
-        push: ${{ github.event_name != 'pull_request' }}
+        push: true
         metadata: ${{ steps.meta.outputs.json }}
         stages: admin-tools
         platforms: linux/amd64,linux/arm64
