Convert documentation/quick-start to use ghcr.io registry
Signed-off-by: Greg Haskins <greg@manetu.com>

--- a/docker/docker-compose/quick-start.yml
+++ b/docker/docker-compose/quick-start.yml
@@ -36,7 +36,7 @@ services:
     networks:
       - temporal-network
   temporal:
-    image: manetu/temporal-yugabyte:latest
+    image: ghcr.io/manetu/temporal-yugabyte:latest
     container_name: temporal
     depends_on:
       - yugabyte
