Add metric collection
Signed-off-by: Greg Haskins <greg@manetu.com>

--- a/benchmarking/ansible/inventories/orbstack.yml
+++ b/benchmarking/ansible/inventories/orbstack.yml
@@ -1,7 +1,7 @@
 all:
   vars:
-    #temporal_database: yugabyte
-    temporal_database: cassandra
+    temporal_database: yugabyte
+    #temporal_database: cassandra
 
 config_host:
   hosts:
