Misc benchmark tunings
Signed-off-by: Greg Haskins <greg@manetu.com>

--- a/benchmarking/ansible/inventories/eks.yml
+++ b/benchmarking/ansible/inventories/eks.yml
@@ -3,21 +3,13 @@ all:
     aws_region: us-east-2
     aws_instance_name: greg
     aws_route53_zone: eng.manetu.io
-    dns_suffix: eng.manetu.io
+    dns_suffix: greg.eng.manetu.io
     aws_instance_types:
       - m7i.4xlarge
-    aws_scaling_config:
-      min_size: 1
-      max_size: 6
-      desired_size: 6
     aws_nodegroups:
       - name: primary
-        scaling_config:
-          min_size: 1
-          max_size: 3
-          desired_size: 3
       - name: database
-        aws_scaling_config:
+        scaling_config:
           min_size: 1
           max_size: 6
           desired_size: 6
@@ -27,8 +19,8 @@ all:
             effect: NO_SCHEDULE
     aws_cloudwatch_enabled: false
 
-    temporal_database: cassandra
-    #temporal_database: yugabyte
+    #temporal_database: cassandra
+    temporal_database: yugabyte
 
     temporal_elastic_storage_size: 100Gi
     yugabyte_master_storage_size: 10Gi
