--- a/benchmarking/ansible/roles/temporal/templates/chart-values.yml
+++ b/benchmarking/ansible/roles/temporal/templates/chart-values.yml
@@ -66,7 +66,7 @@ server:
           customDatastore:
             name: "yugabyte"
             options:
-              hosts:  "yugabyte-yb-tservers"
+              hosts:  {{ temporal_yugabyte_hosts }}
               keyspace: {{ temporal_cassandra_keyspace }}
               replicationFactor: {{ temporal_cassandra_replication_factor }}
               user: cassandra
